ingress-setup/haproxy-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-controller
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: ingress-default-backend
  name: ingress-default-backend
  namespace: ingress-controller
spec:
  selector:
    matchLabels:
      run: ingress-default-backend
  template:
    metadata:
      labels:
        run: ingress-default-backend
    spec:
      containers:
      - name: ingress-default-backend
        image: gcr.io/google_containers/defaultbackend:1.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-default-backend
  namespace: ingress-controller
spec:
  ports:
  - port: 8080
  selector:
    run: ingress-default-backend
---
# see https://kubernetes.io/docs/reference/workloads-18-19
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: ingress-controller
spec:
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      serviceAccountName: ingress-controller
      containers:
      - name: haproxy-ingress
        image: quay.io/jcmoraisjr/haproxy-ingress
        args:
        - --default-backend-service=$(POD_NAMESPACE)/ingress-default-backend
        - --default-ssl-certificate=$(POD_NAMESPACE)/tls-secret
        - --configmap=$(POD_NAMESPACE)/haproxy-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1936
---
# Service for ha-proxy
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: ingress-controller
spec:
  ports:
  - name: port-1
    nodePort: 31720
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-2
    nodePort: 30394
    port: 443
    protocol: TCP
    targetPort: 443
  - name: port-3
    nodePort: 30737
    port: 1936
    protocol: TCP
    targetPort: 1936
  selector:
    run: haproxy-ingress
  type: NodePort
# -----------haproxy ingress ---------------------------#
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sampleapp-ingress
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: master
    http:
      paths:
      - path: /
        backend:
          serviceName: sampleapp-svc
          servicePort: 80
